--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,14 +1,18 @@
-name: s3-browser # you probably want to 'snapcraft register <name>'
-base: core18 # the base snap is the execution environment for this snap
-version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-summary: Single-line elevator pitch for your amazing snap # 79 char long summary
+name: s3-browser
+version: git
+summary: S3 Browser
 description: |
-  This is my-snap's description. You have a paragraph or two to tell the
-  most important story about your snap. Keep it under 100 words though,
-  we live in tweetspace and your description wants to look good in the snap
-  store.
-
+  OfflineIMAP is software that downloads your email mailbox(es) as local
+  Maildirs. OfflineIMAP will synchronize both sides via IMAP.
+base: core18
 parts:
-  my-part:
-    # See 'snapcraft plugins'
-    plugin: nil
+  s3-browser:
+    plugin: python
+    python-version: python2
+    source: .
+    stage-packages:
+      - python-six
+
+apps:
+  s3-browser:
+    command: setup
