--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,4 +1,4 @@
-name:           mygreatapp
+name:           s3-browser
 version:        '1.0'
 summary:        Example python snap app
 description:    Example python snap app
@@ -6,9 +6,9 @@ confinement:    devmode
 grade:          stable
 base: core18
 apps:
-  mygreatapp:
-    command:    my_great_app
+  s3-browser:
+    command:    s3-browser
 
 parts:
-  mygreatapp:
+  s3-browser:
     plugin:     python
