--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -10,6 +10,8 @@ parts:
     stage-packages:
       - libgtk-3-dev
       - python3-gi
+      - gobject-introspection
+      - gir1.2-gtk-3.0
 apps:
   clan:
     command: clan
