--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -12,6 +12,9 @@ parts:
       - python3-gi
       - gobject-introspection
       - gir1.2-gtk-3.0
+      - python3-click
+      - python3-gi-cairo
+      - python3-cairo
 apps:
   clan:
     command: clan
