--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -3,17 +3,46 @@ version: git
 summary: S3 Browser
 description: S3 Browser
 parts:
-  clan:
+  hellowayland:
     plugin: python
+    python-version: python3
     source: .
     stage-packages:
+       - python3-gi
+       - python3-xdg
+       - libcanberra-gtk3-module
+       - gir1.2-gtk-3.0
+    after: [desktop-gtk3]
+
+  desktop-gtk3:
+    source: https://github.com/ubuntu/snapcraft-desktop-helpers.git
+    source-subdir: gtk
+    plugin: make
+    make-parameters: ["FLAVOR=gtk3"]
+    build-packages:
+      - build-essential
       - libgtk-3-dev
-      - python3-gi
-      - gobject-introspection
-      - gir1.2-gtk-3.0
-      - python3-click
-      - python3-gi-cairo
-      - python3-cairo
+    stage-packages:
+      - libxkbcommon0  # XKB_CONFIG_ROOT
+      - ttf-ubuntu-font-family
+      - dmz-cursor-theme
+      - light-themes
+      - adwaita-icon-theme
+      - gnome-themes-standard
+      - shared-mime-info
+      - libgtk-3-0
+      - libgdk-pixbuf2.0-0
+      - libglib2.0-bin
+      - libgtk-3-bin
+      - unity-gtk3-module
+      - libappindicator3-1
+      - locales-all
+      - xdg-user-dirs
+      - ibus-gtk3
+      - libibus-1.0-5
+      - fcitx-frontend-gtk3
+
 apps:
-  clan:
-    command: clan
+  hellowayland:
+    command: desktop-launch $SNAP/bin/clan
+    plugs: [x11, unity7, wayland, desktop]
